Another big update, still not working though.